tests/fixtures/invalid/nowdoc-not-indented.php
<?php

declare(strict_types=1);

namespace Test;

class Foo
{
    private const MY_NOWDOC = <<<'NOWDOC'
not indented!
NOWDOC;
}
